# Ronin-SC-Gimbal-Controller

./: .gitignore  CMakeCache.txt  CMakeLists.txt  README.md  keyboard.py  main.cpp
UnitTest/: PiKeypress.py  gimbal.py
UnitTest/ArduinoGimbal/: ArduinoGimbal.ino
UnitTest/ArduinoReceive/: ArduinoReceive.ino
arduino_controller/: arduino_controller.ino  keyboard.py
arduino_controller/arduino_controller/: arduino_controller.ino
arduino_controller/arduino_keyboard/: arduino_keyboard.ino
arduino_controller/empty_script/sketch_sep03a/: empty_script.ino
arduino_controller/receiver/: receiver.ino
pi_controller/: main.cpp
raspberry-sbus/src/common/include/sbus/: sbus_spec.h
raspberry_pi_controller/: main.cpp
ros_controller/: gimbal.py  roboquest.launch
